trunk/Archive2/7a/b092704f2d8649/output
main.cpp: In function 'int main()':
main.cpp:10:9: error: invalid use of member function (did you forget the '()' ?)
     a.a = 1;
         ^
